Fixed: The video iframes wraps the layout that brings mobile usability issue.

--- a/template/css/normalize.css
+++ b/template/css/normalize.css
@@ -3,3 +3,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+amp-iframe {
+    max-width: 100%;
+    height: auto;
+}
